Added Auto-Dew feature

--- a/Firmware-PlatformIO/platformio.ini
+++ b/Firmware-PlatformIO/platformio.ini
@@ -23,7 +23,7 @@ lib_deps =
 	uberi/CommandParser@^1.1.0
 	shyd/SerialCommand Advanced@^1.0.0
 	bblanchon/ArduinoJson@^7.4.2
-
-platform_packages=
-  framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.1
-  framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.1/esp32-arduino-libs-3.0.1.zip
+	adafruit/Adafruit SHT31 Library@^2.2.2
+platform_packages = 
+	framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#3.0.1
+	framework-arduinoespressif32-libs @ https://github.com/espressif/arduino-esp32/releases/download/3.0.1/esp32-arduino-libs-3.0.1.zip
